objects/tffa__Product__c.object
<CustomObject>
    <description>A financial product serves as a template and framework  for the financial account or service.</description>
    <fields>
        <fullName>CZDeluxeProgram__c</fullName>
        <description>DeluxeProgramValues will be stored here</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CZDeluxeProgram</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZIoltaIbretaTIN__c</fullName>
        <description>IOLTA-IBRETA TIN</description>
        <label>IOLTA-IBRETA TIN</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZRateType__c</fullName>
        <description>Rate Type</description>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZStarterCheckCount__c</fullName>
        <description>Starter Check Count</description>
        <label>Starter Check Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZStarterCheckStartNumber__c</fullName>
        <description>Starter Check Starting Number</description>
        <label>Starter Check Start Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultFISBranchCode__c</fullName>
        <description>All accounts for this product will be opened in FIS under this branch code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Default FIS Branch Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestPlanCode__c</fullName>
        <description>Interest Plan Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Plan Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCustodianProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Custodian Product?</description>
        <label>Custodian Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMoneyMarketProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is it a Money Market Product?</description>
        <label>IsMoneyMarketProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNowProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is it a Now Product?</description>
        <label>IsNowProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStudentProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is it a Student Product?</description>
        <label>Student Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxAgeInYears__c</fullName>
        <description>Maximum Age in Years</description>
        <label>Maximum Age (In Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinAgeInYears__c</fullName>
        <description>Minimum Age in Years</description>
        <label>Minimum Age (In Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UseDefaultBranchCostCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates to use the cost centre of the default FIS Branch Code. If un-checked, the cost centre of branch code forwarded by marketing site will be used.</description>
        <label>Use Cost Centre of Default Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the product is active for consumption. Derived from disabled and effective period (StartDate &amp; EndDate) of the product.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__StartDate__c &lt;= TODAY() &amp;&amp; tffa__EndDate__c &gt;= TODAY()</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AllowBeneficiary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether current product is configured to accept beneficiaries for the account</description>
        <label>Allow Beneficiary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AllowJointApplicant__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether current product is configured to accept joint applicants for the account</description>
        <label>Allow Joint Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AllowedChannelType__c</fullName>
        <defaultValue>&quot;DIGITAL&quot;</defaultValue>
        <description>Deprecated , user Product Matrix</description>
        <label>Deprecated - Allowed Channel Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AllowedFundingType__c</fullName>
        <description>Deprecated ,Use Funding Matrix</description>
        <label>Deprecated - Allowed funding type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FundingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AllowedInterestPayoutFrequency__c</fullName>
        <description>Different Interest Payout Frequency for CD</description>
        <label>Allowed Interest Payout Frequency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__InterestPayoutFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AllowedInterestPayoutMode__c</fullName>
        <description>Different Interest Payout Modes for CD</description>
        <label>Allowed Interest Payout Modes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__InterestPayoutMode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AllowedInvestmentAccountType__c</fullName>
        <description>The type of underlying Deposit account</description>
        <label>Investment Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__InvestmentAccountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AllowedInvestmentContributionType__c</fullName>
        <description>Different contribution types of Invesment plan</description>
        <label>Allowed Investment Contribution Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__InvestmentContributionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AllowedInvestmentPlanType__c</fullName>
        <description>Different types of Invesment plan</description>
        <label>Allowed Investment Plan Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__InvestmentPlanType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AllowedPurpose__c</fullName>
        <description>Allowed list of deposit account purpose for this product</description>
        <label>Allowed Account Purposes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AccountPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AllowedRenewalInstructionType__c</fullName>
        <description>Allowed Renewal Instruction for CD</description>
        <label>Allowed Renewal Instruction Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__RenewalInstructionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__BusinessLoanProcessingMethod__c</fullName>
        <description>A value from a prescribed list that specifies the method used to process the Business Loan application. List includes different processing methods under the umbrella of SBA loans, Line of credit or standard business term loan. The main differences among the different loan types are the loan amounts, the processing times, and use of funds.</description>
        <label>Business Loan Processing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__BusinessLoanProcessingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Category__c</fullName>
        <description>Broad classification of the product</description>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique identifier for the product</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__CryptoCurrency__c</fullName>
        <description>Captures Crypto currency types</description>
        <label>Crypto currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CryptoCurrencyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CryptoCustodian__c</fullName>
        <description>Name of the Third-Party Digital Asset Custody solutions provider</description>
        <label>Crypto custodian</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CryptoCustodianType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CryptoMasterAccountNumber__c</fullName>
        <description>The entity for all transactions associated with a specific program (i.e. BTC Trading
Platform) available through a Tenant or Partner. A Master Account contains all
individual customer Accounts for the specific program. Reconciliation happens at
this level.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Crypto master account number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CryptoProgramId__c</fullName>
        <description>Id of the crypto custodial program</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Crypto program id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CryptoProgramName__c</fullName>
        <description>Name of the crypto custodial program</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Crypto program name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summarized description, meant to provide a quick overview about the product.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures explicit disabling of product independent of any configured effective range.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableAutomaticRepayment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if automatic repayment is enabled on the product</description>
        <label>Enable AutoPay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EnableSettlementInstruction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if settlement instructions are enabled on the product</description>
        <label>Enable Settlement Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <defaultValue>DATE(2049,1,1)</defaultValue>
        <description>The date on which the product expires. Captures the upper bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__ExternalUrl__c</fullName>
        <description>An apply link (pointing to an external site) for the product if it is serviced outside of the sales application.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the product is serviced outside the sales application. Selecting such products in the product selector may result in navigation to an external site for further processing.</description>
        <label>External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__FullDescription__c</fullName>
        <description>A comprehensive description enumerating key features about the product.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Full description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__IconClass__c</fullName>
        <description>Style classes for rendering an icon describing (the nature of) the product.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ImageName__c</fullName>
        <description>Name of image file. Used for resolving the image location from Documents Images folder</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of image file. Upload image under Salesforce Classic &gt;  Documents &gt; Images folder</inlineHelpText>
        <label>Image name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ImageUrl__c</fullName>
        <description>Location of image describing the product as a url.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__InfoUrl__c</fullName>
        <description>Location of additional resource about the product as a url.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the product is not meant to be shown (and selected) in the product selector screen. Such products are applied internally based on some business logic.</description>
        <inlineHelpText>True if the product is not meant to be shown (and selected) in the product selector screen. Such products are applied internally based on some business logic.</inlineHelpText>
        <label>Is Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusiness__c</fullName>
        <description>If the product belongs to business category</description>
        <formula>OR(TEXT(tffa__Category__c)=&apos;BUSINESS_CHECKING&apos;,
TEXT(tffa__Category__c)=&apos;BUSINESS_SAVINGS&apos;,
TEXT(tffa__Category__c)=&apos;BUSINESS_MONEY_MARKET&apos;,
TEXT(tffa__Category__c)=&apos;BUSINESS_CERTIFICATE&apos;,
TEXT(tffa__Category__c)=&apos;BUSINESS_TERM_LOAN&apos;,
TEXT(tffa__Category__c)=&apos;SBA_LOAN&apos;,
TEXT(tffa__Category__c)=&apos;BUSINESS_CREDIT_CARD&apos;,
TEXT(tffa__Category__c)=&apos;BUSINESS_LINE_OF_CREDIT&apos;,
TEXT(tffa__Category__c)=&apos;BUSINESS_REALESTATE_LOAN&apos;,
TEXT(tffa__Category__c)=&apos;BUSINESS_SAFE_DEPOSIT_BOX&apos;,
TEXT(tffa__Category__c)=&apos;MERCHANT_SERVICES&apos;,
TEXT(tffa__Category__c)=&apos;BUSINESS_IRA&apos;)</formula>
        <inlineHelpText>If the product belongs to business category</inlineHelpText>
        <label>Is Business Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsCloningSupported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, multiple account information can be captured under a single application. Useful in scenarios where the intention is to open multiple accounts of same product with same set of owners and signers. This saves on storage and overall complexity over the normal way
        (one account per application) especially when the number of
        accounts is significant.</description>
        <inlineHelpText>If true, multiple account information can be captured under a single application. Useful in scenarios where the intention is to open multiple accounts of same product with same set of owners and signers.</inlineHelpText>
        <label>Enable multiple account capture per app</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true, if the product is applicable only to an employee of the bank</description>
        <label>Is employee Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsLadderSupported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, multiple CD account information can be captured (for laddering) under a single application. Applicable to certificate products.</description>
        <label>Enable CD laddering.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsLending__c</fullName>
        <description>If the product category belongs to lending</description>
        <formula>OR(TEXT(tffa__Category__c)=&quot;CREDIT_CARD&quot;,
TEXT(tffa__Category__c)=&quot;VEHICLE_LOAN&quot;,
TEXT(tffa__Category__c)=&quot;PERSONAL_LOAN&quot;,
TEXT(tffa__Category__c)=&quot;PERSONAL_LINE_OF_CREDIT&quot;,
TEXT(tffa__Category__c)=&quot;EDUCATION_LOAN&quot;,
TEXT(tffa__Category__c)=&quot;BUSINESS_TERM_LOAN&quot;,
TEXT(tffa__Category__c)=&quot;SBA_LOAN&quot;,
TEXT(tffa__Category__c)=&quot;BUSINESS_CREDIT_CARD&quot;,
TEXT(tffa__Category__c)=&quot;BUSINESS_LINE_OF_CREDIT&quot;,
TEXT(tffa__Category__c)=&quot;MORTGAGE&quot;,
TEXT(tffa__Category__c)=&quot;HELOC&quot;,
TEXT(tffa__Category__c)=&quot;BUSINESS_REALESTATE_LOAN&quot;
)</formula>
        <inlineHelpText>If the product category belongs to lending</inlineHelpText>
        <label>Is Lending Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaxIndividualApplicantCount__c</fullName>
        <description>Maximum number of Individual type of applicants for the current product.</description>
        <label>Max Individual Applicant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxLadderSize__c</fullName>
        <description>Maximum number of CD accounts (or rungs) that can be captured in a CD ladder application.</description>
        <label>Max number of CD accounts per ladder app</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxNumberOfClones__c</fullName>
        <description>Maximum number of accounts that can be captured under one application.</description>
        <label>Max number of accounts per application</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxOrganizationApplicantCount__c</fullName>
        <description>Maximum number of Organization type of applicants for the current product</description>
        <label>Max Organization Applicant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaximumQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Upper bound on quantity of product selected in product selection screen.</description>
        <label>Maximum quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MerchantServicesProvider__c</fullName>
        <description>Captures the provider system name for the underlying merchant services</description>
        <label>Merchant Services Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__MerchantServicesProvider</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Popular__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether current product is popular based on computed popularity score</description>
        <label>Popular</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Revolving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product offers a revolving line of credit or a term loan .</description>
        <label>Revolving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product offers a secured loan backed by an existing security held by the applicant.</description>
        <label>Secured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date from which the product is active or ready for consumption. Captures the lower bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__TermUnit__c</fullName>
        <defaultValue>&quot;MONTH&quot;</defaultValue>
        <description>The unit of min and max term in product terms</description>
        <label>Term unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductTermUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <defaultValue>&quot;PRODUCT&quot;</defaultValue>
        <description>Type of product, which determines its behavior in the application. e.g. BUNDLE, PRODUCT</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductType</valueSetName>
        </valueSet>
    </fields>
    <label>Financial Product</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Code__c</columns>
        <columns>tffa__Category__c</columns>
        <columns>InterestPlanCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>tffa__AllProductBundles</fullName>
        <columns>NAME</columns>
        <columns>tffa__Category__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Type__c</field>
            <operation>equals</operation>
            <value>BUNDLE</value>
        </filters>
        <label>All Product Bundles</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Products</pluralLabel>
    <recordTypes>
        <fullName>tffa__BROKERAGE</fullName>
        <active>true</active>
        <description>A brokerage account is an arrangement in which an investor deposits money with a licensed brokerage firm, which places trades on
        behalf of the customer.</description>
        <label>Brokerage Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_CERTIFICATE</fullName>
        <active>true</active>
        <description>A certificate of deposit (CD) is a savings certificate with a fixed maturity date and specified fixed interest rate</description>
        <label>Business Certificate</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_CHECKING</fullName>
        <active>true</active>
        <description>A checking account is a deposit account held at a financial institution that allows withdrawals and deposits using checks, ATM and electronic debits, among other methods</description>
        <label>Business Checking</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_CREDIT_CARD</fullName>
        <active>true</active>
        <description>A credit card is a card issued by a financial instituition which enables the business  to borrow funds.</description>
        <label>Business Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_IRA</fullName>
        <active>true</active>
        <description>Business IRA is a type of Traditional IRA for self-employed people or small business owners. A small business owner with one employee or more, or anyone with a freelance income can open a business IRA.</description>
        <label>Business Retirement Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_LINE_OF_CREDIT</fullName>
        <active>true</active>
        <description>A business line of credit provides flexibility that a regular business loan doesn’t. With a business line of credit, you can borrow up to a certain limit  and pay interest only on the portion of money that you borrow.</description>
        <label>Business Line of Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_MONEY_MARKET</fullName>
        <active>true</active>
        <description>A money market account is an interest-bearing account. money market accounts pay a higher interest rate than regular passbook savings accounts and often include checkwriting and debit card privileges</description>
        <label>Business Money Market</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_REALESTATE_LOAN</fullName>
        <active>true</active>
        <description>A commercial real estate loan is a mortgage secured by a lien on commercial property as opposed to residential property</description>
        <label>Business Real Estate Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_SAFE_DEPOSIT_BOX</fullName>
        <active>true</active>
        <description>A business safe deposit box is a secured container—usually a metal box—that stays in the safe or vault of a federally insured bank
        or credit union. Safe deposit boxes are used to keep valuables, important documents for the business</description>
        <label>Business Safe Deposit Box</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_SAVINGS</fullName>
        <active>true</active>
        <description>A savings account is an interest-bearing deposit account held at a financial institution that  limit the number of withdrawals</description>
        <label>Business Savings</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__BUSINESS_TERM_LOAN</fullName>
        <active>true</active>
        <description>A traditional business term loan is a lump sum of capital that you pay back with regular repayments at a fixed interest rate. Most business owners use the proceeds of term loans to finance a specific, one-off investment for their small business.</description>
        <label>Business Term Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__CERTIFICATE</fullName>
        <active>true</active>
        <description>A certificate of deposit (CD) is a savings certificate with a fixed maturity date and specified fixed interest rate</description>
        <label>Certificate</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__CHECKING</fullName>
        <active>true</active>
        <description>A checking account is a deposit account held at a financial institution that allows withdrawals and deposits using checks, ATM and electronic debits, among other methods</description>
        <label>Checking</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__CREDIT_CARD</fullName>
        <active>true</active>
        <description>A credit card is a card issued by a financial instituition which enables the cardholder to borrow funds.</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__CRYPTO_CUSTODIAL</fullName>
        <active>true</active>
        <description>An account which allows buying/selling cryptocurrency via a custodian (e.g. NYDIG).</description>
        <label>Crypto Custodial</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__EDUCATION_LOAN</fullName>
        <active>true</active>
        <description>An education loan is money borrowed to finance education or school related expenses. Payments are often deferred while in school and for a six-month grace period after graduation</description>
        <label>Education Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__ESA</fullName>
        <active>true</active>
        <description>A Coverdell education savings account (also known as an education savings account, a Coverdell ESA, a Coverdell account, or just an ESA, and formerly known as an education individual retirement account), is a tax-advantaged investment account in the U.S</description>
        <label>Education Savings Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__HELOC</fullName>
        <active>true</active>
        <description>A home equity line of credit (HELOC) is a loan in which the lender agrees to lend a maximum amount within an agreed period, where the collateral is the borrowers equity in his/her house (similar to a second mortgage)</description>
        <label>Home Equity Line of Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__HSA</fullName>
        <active>true</active>
        <description>A Health Savings Account (HSA) is a tax-advantaged account created for individuals who are covered under high-deductible health plans (HDHPs) to save for medical expenses that HDHPs do not cover</description>
        <label>Health Savings Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__IRA</fullName>
        <active>true</active>
        <description>An individual retirement account (IRA) is a tax-advantaged investing tool that individuals use to earmark funds for retirement savings.</description>
        <label>Individual Retirement Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__MERCHANT_SERVICES</fullName>
        <active>true</active>
        <description>Merchant services is a broad category of financial services that enables a business to accept a transaction payment through a secure
        (encrypted) channel using the customer&apos;s credit card or debit card or NFC/RFID enabled device.</description>
        <label>Merchant Services Account</label>
    </recordTypes>
</CustomObject>